# mcs-python-aug-24

./: README.md  pyproject.toml  spread_automation.py
01/: 01-print-2.py  02-type-1.py  03-variable-1.py  03-variable-2.py  04-function-1.py  04-function-2.py  05-input-1.py  05-input-2.py  06-function-1.py  07-type-annotation.py  08-homework-1.py  09-sqrt-abs.py
02/: 10-function-2.py  11-comparisons-1.py  11-comparisons-2.py  12-conditionals-1.py  13-rock-scissor-paper-1.py  13-rock-scissor-paper-2.py  14-import-random.py  15-homework-1.py
03/: 16-for-loop-1  17-for-loop-2  18-fizz-buzz.py  19-string-methods.py  20-type-list.py  21-while-loop.py  22-while-loop-break.py  23-while-loop-continue copy.py  24-fizzbuzz-2.py  25-dict-type.py  26-homework.py
04/: 27-revision.py  28-count-words.py  29-count-words-2.py  30-try-except.py
04-00-package/: main.py  requirements.txt
05/: mail-demo.py  schdule-demo.py  web-auto-demo.py  web-scrp-demo.py
05-file-man/: main.py
05-file-man/files/: 0005.txt
