[tool.poetry]
name = "mcs-python-aug-24"
version = "0.1.0"
description = ""
authors = ["Pumidol <pumidol.l@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
schedule = "^1.2.2"
httpx = "^0.27.2"
rich = "^13.8.1"
resend = "^2.4.0"
playwright = "^1.47.0"
selenium = "^4.24.0"
chromedriver-autoinstaller = "^0.6.4"
ezsheets = "^2024.8.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
